Port over website

--- a/angular.json
+++ b/angular.json
@@ -49,36 +49,14 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/robots.txt",
+              "src/site.webmanifest",
               "src/assets",
-              "src/web.config",
-              "src/manifest.json",
-              "src/browserconfig.xml",
-              "src/favicon.ico",
+              "src/android-chrome-192x192.png",
+              "src/android-chrome-512x512.png",
+              "src/apple-touch-icon.png",
               "src/favicon-16x16.png",
               "src/favicon-32x32.png",
-              "src/favicon-96x16.png",
-              "src/android-icon-36x36.png",
-              "src/android-icon-48x48.png",
-              "src/android-icon-72x72.png",
-              "src/android-icon-96x96.png",
-              "src/android-icon-144x144.png",
-              "src/android-icon-192x192.png",
-              "src/apple-icon-57x57.png",
-              "src/apple-icon-60x60.png",
-              "src/apple-icon-72x72.png",
-              "src/apple-icon-76x76.png",
-              "src/apple-icon-114x114.png",
-              "src/apple-icon-120x120.png",
-              "src/apple-icon-144x144.png",
-              "src/apple-icon-152x152.png",
-              "src/apple-icon-180x180.png",
-              "src/apple-icon-precomposed",
-              "src/apple-icon.png",
-              "src/ms-icon-70x70.png",
-              "src/ms-icon-144x144.png",
-              "src/ms-icon-150x150.png",
-              "src/ms-icon-310x310.png"
+              "src/android-chrome-192x192.png"
             ],
             "styles": [
               "src/styles.scss"
