--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "website",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "buildProd": "ng build --prod",
-    "test": "ng test",
     "lint": "ng lint",
     "deploy": "ng build --prod && firebase deploy"
   },
@@ -26,18 +25,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.3",
-    "@angular/cli": "~11.0.3",
+    "@angular/cli": "^11.0.7",
     "@angular/compiler-cli": "~11.0.3",
-    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
